--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -1,410 +1,255 @@
 @font-face {
-    font-family: 'Overpass';
+	font-family: 'Overpass';
     src:  url('fonts/Overpass_Regular.ttf') format('truetype'),
-       
-    font-weight: normal;
+    font-weight: normal,
     font-style: normal;
 }
 
-body {
-	font-family: Overpass;
-	margin: 0;
-}
-#wrapper {
-  width: 100%;
-  margin: 0 auto;
-}
-h1 a {
-  text-decoration: none;
-}
 
-a:hover {
-  color: black !important;
+.text {
+	
+	margin: 100px; 
+	margin-top: 50px; 
+	font-family: Helvetica, Arial;
+	font-weight: 100; 
+	font-size: 1em; 
+}
+h2 {
 
-}
-a:visited{
-  color: black;
-}
-a{
-  color: black;
-}
-a:active{
-  color: #000000;
-}
-
-.link {
-  text-shadow: 0 0 0 #fff, 0 0 0 #fff;
-  transition: all 0.2s;
-}
-
-.link:hover {
-  text-shadow: -3px -6px 0 #dedcd0, 3px 6px 0 #720e24;
-  cursor: pointer;
-}
-
-nav {
-  height: 50px;
-  width: 100%;
-  background-color: #FFFFFF;
-  box-shadow: 2px 2px 20px rgba(0,0,0,.2);
-  position: fixed;
-  z-index: 9999;
-  top: -65px;
-  transition: all 0.2s ease-in-out;
-}
-
-nav.visible {
-  top: 0;
-}
-
-nav h1:first-child {
-  padding-left: 0px;
-}
-nav h1{
-  position: relative;
-  font-size: 18px;
-  text-decoration: none;
-  display: inline-block;
-  padding-left: 100px;
+	font-size: 2em;
+	font-family: Helvetica, Arial; 
 
 }
-nav h1.third {
-  padding-left: 388px;
-}
-header {
-  text-align:center;
-  padding:520px 0;
-}
-#content {
-  height: 3500px;
-}
-.fixed {
-    position:fixed;
-}
-.screen {
-	background: linear-gradient(top, #3c97d3, #3c97d3 75%, #2c3e50);
-	background: linear-gradient(to bottom, #3c97d3, #3c97d3 75%, #2c3e50);
-}
-.screen .design {
-  height: 820px !important;
+p {
+	font-size: 1em;
+	font-family: Helvetica, Arial; 
 }
 
-.header {
-	background-color: #2c3e50;
-}
 
-.header h6{
-	font-size: 72px;
-	color: #FFFFFF;
-	margin: 0;
-	padding: 0 0 0 10px;
-	height:83px;
+#menu {
+	background-color: white ;
+	width: 110%; 
+	margin-top: -5px; 
+	margin-left: -5px; 	
+	height: 50px;
+	position: fixed; 
+	border: 2px solid #3697d3; 
+	z-index: 150;
 }
-.glasses {
-  position: absolute;
-  margin-top: 40px;
-
-  
-}
-
-.button p{
-  color: #FFFFFF;
-  font-size: 26px;
-  margin-top: 5px;
-  
-}
-
-.box {
-	/*position: absolute;
-	top: 50%;
-	left: 50%;
-	height:50px;
-	width:940px;
-	margin-top: -25px;
-	margin-left: -470px;*/
-	margin: 0 auto; 
-
-
-}
-.typebook {
-  margin-top: 50px;
-  margin-right: auto;
-  margin-left: auto;
-  height: 670px;
-  width: 670px;
-  overflow: hidden;
-  
-
-}
-
-.resumepic{
-  margin-top: 50px;
-  left: 50%;
-
-}
-.resume img {
-  position: relative;
-  left: 23%;
-  margin-bottom: 200px;
-
-
-}
-.tiles .project{
-  height: 240px !important;
-  margin-right: 30px;
-  margin-top: 30px;
-  display: inline-block;
-  box-shadow: 5px 8px 15px rgba(0,0,0,.2);
-}
-.tiles .project.last{
-  margin-right: 0px;
-}
-.tiles {
-  width: 783px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 20px;
-}
-
-.alliberk {
-  cursor: pointer;
-  display: inline-block;
-  margin-left: 100px;
-  position: absolute;
-  height: 50px;
-  z-index: 9998;
-
-}
-
-.mainlogo {
-	left: 50%;
-	top: 50%;
-	position: absolute;
-	margin-left: -130px;
-	margin-top: -130px
-}
-.small {
-    height: 80px;
-    width: auto;
-    background-color: white;
-    padding: 10px;
-}
-.screen h1:first-child{
-padding-left: 0px;
-}
-.screen h1.third-item{padding-left: 388px;}
-.screen h1{
-	font-size: 18px;
+#menu a {
 	display: inline-block;
-	top: 45%;
-	position: relative;
-	padding-left: 100px;
+	text-decoration: none;
+	color: black;
+	margin: 10px;
+	font-size:24px;
+	margin-left: 20px; 
+	margin-right: 20px;
 	
 }
-.screen h2{
-	font-size: 18px;
+#menu 	a:hover{
+	text-shadow: -3px -6px 0 white;
+	cursor: pointer;
+	
+}
+
+#right{
+	width: 50%;
+	float: left;
 	display: inline-block;
-	top: 45%;
-	left: 25%;
-	position: relative;
-	padding-left: 100px;
+	margin: 0px;
+	padding: 0px;
+	position: fixed;
+}
+#left{
+	width: 50%;
+	float: right; 
+	display: inline block ;
+	margin: 0px;
+	padding: 0px;
+	position: fixed;
+}
+.padding {
+	background-color: white ;
+	width: 100%; 
+	height: 50px;
 
 }
 
-#slides {
-	max-width: 940px;
-	display: none;
-	margin: 0 auto;
-  overflow: visible !important;
+#slideshow {
+    position:relative;
+    height:500px;
+	margin: 50px auto;
+	
 }
 
-.screen-end {
-  display: block;
-  content: ' ';
-  padding-top: 100px;
+#slideshow IMG {
+    position:absolute;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+    z-index:8;
+	max-height: 500px; 
 }
 
-.container {
-	margin: 0 auto;
-	left: 50%;
-
+#slideshow IMG.active {
+    z-index:10;
 }
 
-.slidesjs-pagination .active {
-	color: #6ec5a2;
-
+#slideshow IMG.last-active {
+    z-index:9;
 }
 
-.clear {
-  clear: both;
+#next{
+	position: absolute; 
+	margin-left: auto;
+	margin-right: auto;
+	left: 375px;
+	right: 0;
+	bottom: 40%;
+	display: inline-block; 
+}
+#next:hover{
+	cursor: pointer; 
+}
+#last{
+	position: absolute; 
+	margin-left: auto;
+	margin-right: auto;
+	right: 375px;
+	left: 0;
+	bottom: 40%; 
+	display: inline-block; 
+}
+#last:hover{
+	cursor: pointer; 
+}
+#caption {
+	text-align: center; 
+	font-family: Helvetica, Arial; 
+	margin-top:-30px;
+	margin-left: 25%;
+	margin-right: 25%; 
+}
+#bg {
+	text-align:center;
+	height: 50%;
+	background-image: url(../images/pic.jpg);	
+	background-position: 50% 20%;  
+	background-size: 100% ;
+	position:relative;
+	z-index: 200; 
+}
+#top {
+	height: 56%; 
+	margin: 0px; 
+	padding: 0px; 
+	float: top; 
+}
+#bottom {
+	height: 44%; 
+	margin: 0px; 
+	padding: 0px;
+	float: bottom;
+	font-size: 150px;
+	color: white; 
+	/*background-color: rgba(0,0,0,.5);*/	
+	background-image: url(../images/gradient.png); 
+	z-index: 250; 
+}
+#bg2 {
+
+	margin: 0px; 
+	padding: 0px;
+	
+	display: block;
+	height: 25%; 
+	width: 100%
+	/*background-color: rgba(0,0,0,.5);*/	
+	background-image: url(../images/gradient.png); 
+
+}
+#title {
+	color: white;
+	width: 100%; 
+	font-size: 150px; 
+	margin: auto; 
+	text-shadow: 2px 2px black;
 }
 
-#center {
-  width: 50%;
-  margin: 0 auto;
+a{
+	display: inline-block;
+	text-decoration: none;
+	color: black;
+	margin-top: 40px;
+	font-size:24px;
+	margin-left: 20px; 
+	margin-right: 20px;
 }
 
-#slides {
-  display: none;
-  margin-top: 50px;
-  
+a:hover{
+	text-shadow: -3px -6px 0 white;
+	cursor: pointer;
 }
 
-#slides .slidesjs-navigation {
-  margin-top:5px;
-  
-
+p, ul, h1 { margin: 0 0 20px 0; }
+* {
+	margin: 0;
+	padding: 0;
+}
+body {
+	overflow-x: hidden;
 }
 
-a.slidesjs-next,
-a.slidesjs-previous,
-a.slidesjs-play,
-a.slidesjs-stop {
-  background-image: url(../images/btns-next-prev.png);
-  background-repeat: no-repeat;
-  display:block;
-  width:12px;
-  height:18px;
-  overflow: hidden;
-  text-indent: -9999px;
-  float: left;
-  margin-right:5px;
+html, body{
+	font-family: Overpass;
+	margin: 0;
+	height: 100%; 
+	width: 100%;
+	margin: 0;  	
+	padding: 0; 
 }
 
-a.slidesjs-next {
-  margin-right:10px;
-  margin-top: 15px !important;
-  background-position: -12px 0;
+.label {
+	position: relative; 
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(#3697d3 30%, white);
+	padding: 0; 
+	margin: 0; 
 }
 
-a:hover.slidesjs-next {
-  background-position: -12px -18px;
-}
-
-a.slidesjs-previous {
-  background-position: 0 0;
-  margin-top: 15px !important;
-}
-
-a:hover.slidesjs-previous {
-  background-position: 0 -18px;
-}
-
-a.slidesjs-play {
-  width:15px;
-  background-position: -25px 0;
-  margin-top: 15px !important;
-}
-
-a:hover.slidesjs-play {
-  background-position: -25px -18px;
-}
-
-a.slidesjs-stop {
-  width:18px;
-  margin-top: 15px !important;
-  background-position: -41px 0;
-}
-
-a:hover.slidesjs-stop {
-  background-position: -41px -18px;
-}
-
-.slidesjs-pagination {
-  margin: 15px 0 0;
-  float: right;
-  list-style: none;
-}
-
-.slidesjs-pagination li {
-  float: left;
-  margin: 0 1px;
-}
-
-.slidesjs-pagination li a {
-  display: block;
-  width: 13px;
-  height: 0;
-  padding-top: 13px;
-  background-image: url(../images/pagination.png);
-  background-position: 0 0;
-  float: left;
-  overflow: hidden;
-}
-
-.slidesjs-pagination li a.active,
-.slidesjs-pagination li a:hover.active {
-  background-position: 0 -13px
-}
-
-.slidesjs-pagination li a:hover {
-  background-position: 0 -26px
-}
-
-#slides a:link,
-#slides a:visited {
-  color: #333
-}
-
-#slides a:hover,
-#slides a:active {
-  color: #9e2020
-}
-
-.navbar {
-  overflow: hidden;
-}
-
-#slides {
-  display: none
-}
-
-.container {
-  margin: 0 auto
-}
-
-/* For tablets & smart phones */
-@media (max-width: 767px) {
-  body {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .container {
-    width: auto
-  }
-}
-
-/* For smartphones */
-@media (max-width: 480px) {
-  .container {
-    width: auto
-  }
-}
-
-/* For smaller displays like laptops */
-@media (min-width: 768px) and (max-width: 979px) {
-  .container {
-    width: 724px
-  }
-}
-
-/* For larger displays */
-@media (min-width: 1200px) {
-  .container {
-    width: 1170px
-  }
+#app {
+	width: 200px; 
+	position: absolute; 
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	
 }
 
 
+h1{
+	font-family: Helvetica, Arial; 	
+    text-align:left;
+    background-color:white;
+    font-size: 92px;
+	color: #3697d3;
+	margin: 0;
+	padding-left: 20px; 
 
+	z-index: -1; 
+	height:83px;
+}
 
-
-
-
-
-
-
-
-
-
+#mail{
+	max-width: 150px; 
+}
+#footer{
+	height: 100px;
+	text-align: center;
+	font-size: 1em;
+	font-family: Helvetica, Arial; 
+}
 
